Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84703

qdoc: DocBook generator: scoped enums not handled correctly

    XMLWordPrintable

Details

    • 5
    • a6ab3c81f038f7bc2d32c9c613ba195758d0b011 (qt/qttools/dev) ffedf9cf7e6c52d8b59af47b21e7a29ee23720ec (qt/qttools/5.15)
    • Da Vinci sprint 10

    Description

      While the cppcodeparser/marker have been fixed to properly handle scoped enums, the DocBook generator has dedicated code that doesn't have these improvements.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes