qdoc: DocBook generator: Correctly handle enum classes

While commit 46f71fcc fixed handling of enum classes for the code
parser and marker, the DocBook generator has some dedicated code
that also needs to be amended.

Fixes: QTBUG-84703
Change-Id: Idea969e4baeb5adc0071e842733104758a70b703
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit a6ab3c81f038f7bc2d32c9c613ba195758d0b011)